# celegans_proj

./: .gitignore  README.md  pyproject.toml
config/: local-dev.sh  server-train.sh
src/celegans_proj/generate/: fetch.py  pseudoAnomaly.py  transfer.py
src/celegans_proj/models/: __init__.py
src/celegans_proj/models/my_model/: __init__.py  anomaly_map.py  lightning_model.py  loss.py  segmentor_param_net.py  torch_model.py
src/celegans_proj/models/my_model/components/: __init__.py  basic_modules.py  clustering.py  segmenter_param.py  segmentor.py  segmentor_tf.py
src/celegans_proj/models/simSID/: __init__.py  lightning_model.py  torch_model.py  wddd2_ad_config.py
src/celegans_proj/models/simSID/components/: __init__.py  alert.py  hierarchical_memory.py  inpaint.py  memory.py  squid.py
src/celegans_proj/run/: predict.py  run.py  tmp.py  train.py
src/celegans_proj/run/image/: CelegansDataset.py  __init__.py  trainer_visualization.py  wddd2.py
src/celegans_proj/utils/: cvt_safetensors2pt.py  file_import.py
src/celegans_proj/utils/table_builder/: base.py  celegans.py
src/celegans_proj/visualize/: visualize.py  visualize_results.py  visualize_voxel.py  volumeRendering.py
