[project]
name = "celegans_proj"
version = "0.1.0"
description = ""
authors = [
    { name = "Kazuki Shimizu", email = "kazukimacbook19980513@gmail.com" }
]
dependencies = [
    "tqdm>=4.66.5",
    "wandb>=0.18.5",
    "anomalib>=1.0.0",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "torchaudio>=2.5.1",
    "lightning>=2.4.0",
    "matplotlib>=3.9.2",
    "opencv-python>=4.10.0.84",
    "kornia>=0.7.3",
    "imgaug>=0.4.0",
    "numpy==1.26.4",
    "pandas>=2.2.3",
    "scikit-learn>=1.5.2",
    "timm>=1.0.11",
    "einops>=0.8.0",
    "freia>=0.2",
    "open-clip-torch>=2.29.0",
    "albumentations>=1.4.21",
    "tabulate>=0.9.0",
    "plotly>=5.24.1",
    "h5py>=3.12.1",
    "kaleido>=0.2.1",
    "python-dotenv>=1.0.1",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/celegans_proj"]
